add in html tags and images for page

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,28 +4,52 @@
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="container">
+   <div class="title">
+    <img src="images/brand.png"/>
+   </div>
 
-  Capture and Share the World's Moments
+  <div class="login-button">
+    MAKE BUTTON with <img src="images/home.png"/>
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="aside">
+    <img src="images/phones.png"/> 
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="subheading">
+    Capture and Share the World's Moments
+  </div>
 
-  Oh yeah, did we mention it's free?
+  <div class="content">
+    Instagram is a <span class="bold">fast</span>, <span class="bold">beautiful</span>, and <span class="bold">fun</span> way to share your life with friends and family.
 
-  Download on the App Store
-  Get it on Google Play
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    Oh yeah, did we mention it's free?
+  </div>
 
-  &copy; 2014 Instagram
+  <div class="ios-button">
+    <img src="images/badge-iphone.png"/>
+  </div>
+  <div class="android-button">
+    <img src="images/badge-android.png"/>
+  </div>
+  </div>
+  <footer>
+  <ul class="foot-buttons">
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+  </ul>
+  <div class="copyright">
+    &copy; 2014 Instagram
+  </div>
+  </footer>
 </body>
 </html>
