Some CSS work done, button added for log in

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,33 +2,36 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css" media="screen" title="no title">
 </head>
 <body>
   <div class="container">
+    <div class="aside">
+      <img src="images/phones.png"/>
+    </div>
    <div class="title">
     <img src="images/brand.png"/>
    </div>
 
   <div class="login-button">
-    MAKE BUTTON with <img src="images/home.png"/>
+     <button type="button" name="button" class="button"><img src="images/home.png"/> Log in</button>
   </div>
 
-  <div class="aside">
-    <img src="images/phones.png"/> 
-  </div>
+  <div class="content-container">
 
   <div class="subheading">
     Capture and Share the World's Moments
   </div>
 
   <div class="content">
-    Instagram is a <span class="bold">fast</span>, <span class="bold">beautiful</span>, and <span class="bold">fun</span> way to share your life with friends and family.
 
-    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <p>Instagram is a <span class="bold">fast</span>, <span class="bold">beautiful</span>, and <span class="bold">fun</span> way to share your life with friends and family.</p>
 
-    Oh yeah, did we mention it's free?
-  </div>
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
+    <p>Oh yeah, did we mention it's free?</p>
+
+  <div class="download-buttons">
   <div class="ios-button">
     <img src="images/badge-iphone.png"/>
   </div>
@@ -36,6 +39,9 @@
     <img src="images/badge-android.png"/>
   </div>
   </div>
+  </div>
+  </div>
+</div>
   <footer>
   <ul class="foot-buttons">
     <li>About Us</li>
