add background for content container

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,43 +5,45 @@
   <link rel="stylesheet" href="css/main.css" media="screen" title="no title">
 </head>
 <body>
+  <main>
+        <div class="aside">
+          <img src="images/phones.png"/>
+        </div>
   <div class="container">
-    <div class="aside">
-      <img src="images/phones.png"/>
+
+       <div class="title">
+        <img src="images/brand.png"/>
+       </div>
+
+      <div class="login-button">
+         <button type="button" name="button" class="button"><img src="images/home.png"/> Log in</button>
+      </div>
+
+    <div class="content-container">
+
+      <div class="subheading">
+        Capture and Share the World's Moments
+      </div>
+
+      <div class="content">
+
+        <p>Instagram is a <span class="bold">fast</span>, <span class="bold">beautiful</span>, and <span class="bold">fun</span> way to share your life with friends and family.</p>
+
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+      <div class="download-buttons">
+        <div class="ios-button">
+          <img src="images/badge-iphone.png"/>
+        </div>
+        <div class="android-button">
+          <img src="images/badge-android.png"/>
+        </div>
     </div>
-   <div class="title">
-    <img src="images/brand.png"/>
-   </div>
-
-  <div class="login-button">
-     <button type="button" name="button" class="button"><img src="images/home.png"/> Log in</button>
+    </div>
   </div>
-
-  <div class="content-container">
-
-  <div class="subheading">
-    Capture and Share the World's Moments
-  </div>
-
-  <div class="content">
-
-    <p>Instagram is a <span class="bold">fast</span>, <span class="bold">beautiful</span>, and <span class="bold">fun</span> way to share your life with friends and family.</p>
-
-    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-
-    <p>Oh yeah, did we mention it's free?</p>
-
-  <div class="download-buttons">
-  <div class="ios-button">
-    <img src="images/badge-iphone.png"/>
-  </div>
-  <div class="android-button">
-    <img src="images/badge-android.png"/>
-  </div>
-  </div>
-  </div>
-  </div>
-</div>
+</main>
   <footer>
   <ul class="foot-buttons">
     <li>About Us</li>
