add backgroud color and submit

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,15 +10,9 @@
           <img src="images/phones.png"/>
         </div>
   <div class="container">
-
-       <div class="title">
-        <img src="images/brand.png"/>
-       </div>
-
-      <div class="login-button">
-         <button type="button" name="button" class="button"><img src="images/home.png"/> Log in</button>
-      </div>
-
+      <header>
+       <h1><span class="title"><img src="images/brand.png"></span>          <span class="login-button"><button type="button" name="button" class="button"><img src="images/home.png"/>Log in</button></span></h1>
+    </header>
     <div class="content-container">
 
       <div class="subheading">
